docs-website/versioned_docs/version-2.18/pipeline-components/extractors.mdx
---
title: "Extractors"
id: extractors
slug: "/extractors"
description: ""
---

# Extractors

| Name                                                           | Description                                                                                                                                |
| :------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------- |
| [LLMDocumentContentExtractor](extractors/llmdocumentcontentextractor.mdx) | Extracts textual content from image-based documents using a vision-enabled Large Language Model (LLM).                                     |
| [LLMMetadataExtractor](extractors/llmmetadataextractor.mdx)               | Extracts metadata from documents using a Large Language Model. The metadata is extracted by providing a prompt to a LLM that generates it. |
| [NamedEntityExtractor](extractors/namedentityextractor.mdx)               | Extracts predefined entities out of a piece of text and writes them into documents’ meta field.                                            |
